--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-toastify": "9.1.2",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "yup": "^1.4.0",
+    "yup": "^1.5.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
